--- a/Joystick/Joystick-Info.plist
+++ b/Joystick/Joystick-Info.plist
@@ -27,7 +27,7 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2013 Prachi Gauriar. All rights reserved.</string>
 	<key>NSMainNibFile</key>
-	<string>MainMenu</string>
+	<string>MainMenu-ObjectController</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
